# openblame

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  agent.md  pyproject.toml  test.ps1
.github/workflows/: ci.yml  publish.yml
dataghost/: __init__.py  agent.py  cli.py  config.py  llm.py  mcp_server.py  reporter.py
dataghost/tools/: __init__.py  common.py  lineage.py  owners.py  quality.py  schema_diff.py
openblame/: __init__.py  agent.py  cli.py  config.py  llm.py  mcp_server.py  reporter.py
openblame/tools/: __init__.py  owners.py  quality.py
scratch/: e2e_test.py
tests/: __init__.py  conftest.py  test_agent.py  test_tools.py
