[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "dataghost"
version = "0.1.0"
description = "Local-first AI investigator for OpenMetadata data pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DataGhost Contributors" }]
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.0.0",
  "ollama>=0.4.0",
  "openmetadata-ingestion>=1.5.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.0",
  "rich>=13.9.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "respx>=0.21.0",
]

[project.scripts]
dataghost = "dataghost.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
