[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "openblame"
version = "0.1.8"
description = "Local-first AI investigation CLI for OpenMetadata data pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenBlame Contributors" }]
keywords = ["openmetadata", "data-lineage", "ollama", "mcp", "ai-agent", "data-observability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.0.0",
  "ollama>=0.4.0",
  "openmetadata-ingestion>=1.5.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.0",
  "rich>=13.9.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "respx>=0.21.0",
  "twine>=5.1.0",
]

[project.scripts]
openblame = "openblame.cli:app"

[project.urls]
Homepage = "https://github.com/manasdutta04/openblame"
Repository = "https://github.com/manasdutta04/openblame"
Issues = "https://github.com/manasdutta04/openblame/issues"

[tool.hatch.build.targets.wheel]
packages = ["openblame"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
